python_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glpi-ingress
  namespace: devops
  labels:
   type: glpi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /home
        pathType: Exact
        backend:
          service:
            name: flask
            port:
              number: 5000
